--- a/index.html
+++ b/index.html
@@ -1,23 +1,7 @@
-<!--
-Copyright 2018 Google LLC
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    https://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
--->
-<!-- [START sheets_quickstart] -->
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Google Sheets API Quickstart</title>
+    <title>URL Link Tagger</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://ga-dev-tools.appspot.com/public/css/index.css" />
     <style>
@@ -33,7 +17,7 @@ limitations under the License.
     </style>
 </head>
 <body>
-<p>Google Sheets API Quickstart</p>
+<p>You must authenticate with your Woolworths Google Account</p>
 
 <!--Add buttons to initiate auth sequence and sign out-->
 <button id="authorize_button" style="display: none;">Authorize</button>
